Pertemuan 12: message queue dengan RabbitMQ
